--- a/JavaFX/build.gradle
+++ b/JavaFX/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 application {
-    mainClassName = 'GalleryApp'
+    mainClassName = 'app.GalleryApp'
 }
 java {
     sourceCompatibility = JavaVersion.VERSION_17
